tests/NormalTests/paczka1/fuzzy1/18168525.err
Error in line 1: sIlxWy S482 77,6
Error in line 3: LYEdK40 A964 82,3
Error in line 5: zHqk2iBbY S482 21,5
